@@ -1,1 +1,1 @@
-4.0.4beta
+4.0.4
