@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v4.0.4beta.html">v4.0.4beta</a></td>
+      <td><a href="v4.0.4.html">v4.0.4</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -117,7 +117,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2015-01-26 12:24:12 $.
+    Last updated  $Date: 2015-06-21 19:13:04 $.
   </p>
 </body>
 </html>
